--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>watermark_assistant</title>
+  <title>Watermark Assistant</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
