refactor: update app name

--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Watermark Assistant.">
+  <meta name="description" content="PicGuard - This app can add watermarks to pictures to prevent them from being used maliciously.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Watermark Assistant">
+  <meta name="apple-mobile-web-app-title" content="PicGuard">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>Watermark Assistant</title>
+  <title>PicGuard</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
